--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,35 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.menu, .quiz, .score{
+  width: 500px;
+  height: 500px;
+  background-color: lightblue;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.menu button, .quiz button, .score button{
+  width: 300px;
+  height: 50px;
+  margin:5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+button:active {
+  background: orange;
+  color: white;
+}
